Closed
Bug 458057
Opened 17 years ago
Closed 15 years ago
compile error for widget/src/gtk2/nsWindow.cpp
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a4
People
(Reporter: ul-mcamafia, Assigned: ul-mcamafia)
References
Details
(Keywords: verified1.9.1, verified1.9.2)
Attachments
(3 files, 1 obsolete file)
|
1.96 KB,
patch
|
Details | Diff | Splinter Review | |
|
1.96 KB,
patch
|
dveditz
:
approval1.9.2.4+
|
Details | Diff | Splinter Review |
|
1.93 KB,
patch
|
dveditz
:
approval1.9.1.10+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; AIX 5.1; en-US; rv:1.8.1.17) Gecko/20080905 Firefox/2.0.0.17
Build Identifier: CVS HEAD + TRUNK
Compiling on a UNIX platform with non XFree86 X-server fails because
#include <X11/XF86keysym.h> cannot be found and there are no XF86_XP keysymbols defined on those platforms.
Found on both Firefox 3.0.3 and Trunk
Reproducible: Always
Steps to Reproduce:
1. Build on AIX 5.1 with GTK 2.10.3
2.
3.
Actual Results:
compile error
Expected Results:
successful compilation
| Assignee | ||
Updated•17 years ago
|
Version: unspecified → Trunk
Updated•16 years ago
|
Product: Core → Core Graveyard
| Assignee | ||
Comment 1•16 years ago
|
||
It's easy to #ifdef around, but the proper way seems using the configure's output if XFree86/X.org X server is detected instead of
#if not defined (_AIX41)
...
#endif /* (_AIX41) */
around the XF86_XP... keysymbols.
In my build machine, I copied the file X11/XF86keysym.h from AIX 6 to AIX 5 under /usr/include/X11
| Assignee | ||
Comment 3•16 years ago
|
||
| Assignee | ||
Comment 4•16 years ago
|
||
Usually it's not a good idea to just copy headers from newer releases back to older.
This may result in linker errors, if the new header declares something not available in the host libs, or even worse occur at runtime.
I'm not happy with the above patch because the second hunk should be included if the machine has XFree86 not vice versa.
Else it works and is a safe shot.
| Assignee | ||
Comment 5•16 years ago
|
||
(In reply to comment #2)
> In my build machine, I copied the file X11/XF86keysym.h from AIX 6 to AIX 5
> under /usr/include/X11
Missing in source diff file Firefox.base.3_0_7.source.diffs as this isn't delivered neither with AIX nor compiler
| Assignee | ||
Updated•15 years ago
|
Hardware: Other → PowerPC
Version: Trunk → 1.9.1 Branch
| Assignee | ||
Updated•15 years ago
|
Attachment #409055 -
Flags: review?(roc)
Attachment #409055 -
Flags: review?(roc) → review+
| Assignee | ||
Updated•15 years ago
|
Attachment #409055 -
Flags: superreview?(vladimir)
| Assignee | ||
Updated•15 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•15 years ago
|
Assignee: nobody → ul.mcamafia
| Assignee | ||
Updated•15 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 6•15 years ago
|
||
Attachment #428484 -
Flags: superreview?
| Assignee | ||
Comment 7•15 years ago
|
||
| Assignee | ||
Updated•15 years ago
|
Attachment #428486 -
Flags: superreview?(pavlov)
| Assignee | ||
Updated•15 years ago
|
Attachment #428484 -
Flags: superreview? → superreview?(pavlov)
| Assignee | ||
Updated•15 years ago
|
Attachment #409055 -
Flags: superreview?(vladimir)
| Assignee | ||
Comment 8•15 years ago
|
||
Attachment #428492 -
Flags: superreview?(pavlov)
| Assignee | ||
Comment 9•15 years ago
|
||
Another superreviewer for gfx available ???
| Assignee | ||
Updated•15 years ago
|
Attachment #428484 -
Flags: superreview?(pavlov)
| Assignee | ||
Updated•15 years ago
|
Attachment #428486 -
Flags: superreview?(pavlov)
| Assignee | ||
Updated•15 years ago
|
Attachment #428492 -
Flags: superreview?(pavlov)
| Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
Whiteboard: [attachment 428484 to trunk]
Updated•15 years ago
|
Component: GFX: Gtk → Graphics
Product: Core Graveyard → Core
QA Contact: gtk → thebes
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [attachment 428484 to trunk]
Attachment #428486 -
Flags: approval1.9.2.3?
Attachment #428492 -
Flags: approval1.9.1.10?
This is essentially NPOTB for supported platforms, so these should be easy approvals.
Updated•15 years ago
|
Attachment #428486 -
Flags: approval1.9.2.3? → approval1.9.2.3+
Comment 12•15 years ago
|
||
Comment on attachment 428492 [details] [diff] [review]
recreated patch with hg for branch 1.9.1, context adjusted only
[Checkin: Comment 14]
Approved for 1.9.2.3 and 1.9.1.10, a=dveditz for release-drivers
Attachment #428492 -
Flags: approval1.9.1.10? → approval1.9.1.10+
| Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
Whiteboard: [checkin 428486 to moz192][checkin 428492 to moz191]
Comment 13•15 years ago
|
||
Comment on attachment 428486 [details] [diff] [review]
recreated patch with hg for branch 1.9.2, context adjusted only
[Checkin: Comment 13]
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/1ea19a395253
Attachment #428486 -
Attachment description: recreated patch with hg for branch 1.9.2, context adjusted only → recreated patch with hg for branch 1.9.2, context adjusted only
[Checkin: Comment 13]
Updated•15 years ago
|
Flags: in-testsuite-
Whiteboard: [checkin 428486 to moz192][checkin 428492 to moz191] → [checkin 428492 to moz191]
Target Milestone: --- → mozilla1.9.3a4
Version: 1.9.1 Branch → Trunk
Updated•15 years ago
|
Attachment #428484 -
Attachment description: recreated patch with hg for trunk → recreated patch with hg for trunk
[Checkin: Comment 10]
Updated•15 years ago
|
Attachment #409055 -
Attachment is obsolete: true
Updated•15 years ago
|
status1.9.2:
--- → .3-fixed
Comment 14•15 years ago
|
||
Comment on attachment 428492 [details] [diff] [review]
recreated patch with hg for branch 1.9.1, context adjusted only
[Checkin: Comment 14]
http://hg.mozilla.org/releases/mozilla-1.9.1/rev/666bfd96c47f
Attachment #428492 -
Attachment description: recreated patch with hg for branch 1.9.1, context adjusted only → recreated patch with hg for branch 1.9.1, context adjusted only
[Checkin: Comment 14]
Updated•15 years ago
|
| Assignee | ||
Updated•15 years ago
|
Keywords: verified1.9.1
| Assignee | ||
Updated•15 years ago
|
Keywords: verified1.9.2
You need to log in
before you can comment on or make changes to this bug.
Description
•