Bug 458057: Fix AIX build bustage in widget. r=roc